--- a/MVC-SpringBoot/src/main/resources/application.properties
+++ b/MVC-SpringBoot/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=MVC-SpringBoot
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.datasource.url=jdbc:postgresql://localhost:5432/springbootmvc
+spring.datasource.username=postgres
+spring.datasource.password=njasm786
+
+# Hibernate dialect for PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate settings for JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
